# RayTracing

./: CMakeLists.txt  Ground.cpp  Ground.h  Light.cpp  Light.h  README.md  RGBf.cpp  RGBf.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Vector3.cpp  Vector3.h  main.cpp
